--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.sound.min.js"></script>
     <script src="./p5.play.js"></script>
+    <script src="Forms.js"></script>
+    <script src="Game.js"></script>
+    <script src="Player.js"></script>
     
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-app.js"></script>
