--- a/index.html
+++ b/index.html
@@ -10,21 +10,20 @@
     <script src="Player.js"></script>
     
 <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-database.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-database.js"></script>
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 
 <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "AIzaSyDb6SAgH1Kj2-_j7zMpXzv5-kxB6fbrdpw",
-    authDomain: "car-racing-game-74231.firebaseapp.com",
-    databaseURL: "https://car-racing-game-74231-default-rtdb.firebaseio.com",
-    projectId: "car-racing-game-74231",
-    storageBucket: "car-racing-game-74231.appspot.com",
-    messagingSenderId: "591666520595",
-    appId: "1:591666520595:web:0b5a765465eb774728d5e6"
+    apiKey: "AIzaSyCo2F2yXiMpWas7Gl3s0Th3kj5U6F8gq4Y",
+    authDomain: "mygame-badc0.firebaseapp.com",
+    projectId: "mygame-badc0",
+    storageBucket: "mygame-badc0.appspot.com",
+    messagingSenderId: "195204562030",
+    appId: "1:195204562030:web:f8eca6d166561527407a7f"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
